# birr

./: .gitignore  .gitmodules  README.md  notes.txt
app/: package-lock.json  package.json  webpack.config.ts
app/src/: App.js
app2/: .env.example  config-overrides.js  package.json
app2/src/: App.js
bir/: Cargo.toml
bir/src/: listen.rs  main.rs  present.rs  prove.rs  verify.rs
contracts/: foundry.toml
contracts/birr_stablecoin/scripts/: verifyBridgedTokenBytecode.ts
contracts/birr_stablecoin/scripts/deploy/: ScriptUtils.sol  deploy-fiat-token.s.sol
contracts/broadcast/DeployETB_Ethereum.s.sol/11155111/: run-1730992911.json  run-1730993351.json  run-1730993574.json
contracts/broadcast/DeployETB_Unichain.s.sol/1301/: run-1730994148.json  run-1730994284.json
contracts/broadcast/MintETB.s.sol/11155111/: run-1730998083.json  run-latest.json
contracts/cache/: solidity-files-cache 2.json  solidity-files-cache.json
contracts/cache/DeployETB_Ethereum.s.sol/11155111/: run-1730992911.json
contracts/script/: ConfigureETB.s.sol  DeployETB_Ethereum.s 2.sol  DeployETB_Scroll.sol  DeployETB_Unichain.s.sol  DeployEthiopianBirrV0.s.sol  MintETB.s.sol  TestBridge.s.sol
contracts/src/: Blacklistable.sol  ETB.sol  EthiopianBirrProxy.sol  EthiopianBirrV0.sol  Ownable.sol  Rescuable.sol
contracts/src/hooks/: BirrHook.sol  Blacklistable 2.sol  Blacklistable.sol
contracts/src/solvent_token/: Blacklistable.sol  Pausable.sol
hardhat/: hardhat.config.ts  networks.ts  package.json
hardhat/contracts/: ETB.sol
hardhat/contracts/hooks/: BirrHook 2.sol  BirrHook.sol
hardhat/deploy/: ETB.ts
hardhat/deployments/ethereum-testnet/: ETB.json
hardhat/deployments/scroll-testnet/: ETB.json
hardhat/deployments/unichain/: ETB.json
hardhat/deployments/unichain-testnet/: ETB.json
hardhat/tasks/: bridge-token.ts  configure.ts  get-token-balance.ts
setb_frontend/: package-lock.json  package.json
setb_frontend/src/: App.js
setb_frontend/src/abi/: ETB.json
(+2 files in other folders)
