[package]
name = "bir"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.1", features = ["client", "http1", "server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json"]}
