[package]
name = "bir"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "1.3" }
http = { version = "1.1" }
http-body-util = { version = "0.1" }
hyper-util = { version = "0.1" }
hyper = { version = "1.1", features = ["client", "http1", "server"] }
tokio = { version = "1.38", features = ["full"] }
tokio-rustls = { version = "0.24" }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json"]}
notary-client = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
tlsn-common = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
tlsn-examples = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils.git" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
tls-server-fixture = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
tlsn-server-fixture = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
tlsn-server-fixture-certs = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils.git" }
clap = "4.5.20"
